Fix jumping navbar on hover

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3808,6 +3808,7 @@ input[type="submit"].btn.btn-mini {
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.10);
   border-right:1px solid #424242;
   cursor:pointer;
+  border-bottom: 3px solid transparent;
 }
 
 .navbar .btn {
